# StepBOX

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
docker/: Dockerfile
drivers/encoder/: common.hpp  encoder.hpp
drivers/tinyusb/: usb_descriptors.h
drivers/ws2812b/: CMakeLists.txt  ws2812b.cmake  ws2812b.cpp  ws2812b.hpp
include/: board.h  device.h  gamepad.h  keyboard.h  stepbox.h  tusb_config.h  usb_descriptors.h
modules/: module.h
modules/leds/: colors.h  effect.h  leds.cpp  leds.h  phasing.cpp  phasing.h
src/: CMakeLists.txt  board.cpp  device.cpp  gamepad.cpp  keyboard.cpp  main.cpp  usb_descriptors.cpp
